# aica-MetaGPT

./: .gitignore  LICENSE  README.md  pyproject.toml  workflow.mmd
aica/: __init__.py  cli.py
aica/core/: base.py  config.py  parsers.py  workspace.py
aica/team/: actions.py  roles.py  software_team.py
examples/: prompt.md  spec.md  spec.yaml
tests/core/: test_parsers.py
